--- a/doc/thesis/conclusion.tex
+++ b/doc/thesis/conclusion.tex
@@ -17,10 +17,10 @@ model. Although sensitivity tests in Deneux et al. certainly hinted
 at this, the current work clearly demonstrates this fact \cite{Deneux2006}. Therefore,
 any single estimate of parameters is insufficient for analysis. As such,
 identification of the BOLD model that do not treat the parameters as distributions
-will not be able to overcome the inherent indeterminability of the
+will not be able to overcome the inherent ill-posed nature of the
 parameters. Besides the Unscented Kalman Filter, this is the only approach
 that accomplishes this task without repeatedly calculating the parameters 
-to build a distribution. The Unscented Kalman Filter, of course, is limited
+to build a distribution. The Unscented Kalman Filter though, is restricted
 to Gaussian estimation which limits its ability to estimate the posterior. 
 
 The primary reason this method has not been used before is the high 
@@ -29,24 +29,20 @@ the parameters is floated as the correct method, yet
 learning 7 parameters with a Monte Carlo method was deemed intractable
 \cite{Murray2008}. The 
 concern was that so many parameters creates a prohibitively large 
-search space, that requires too many particle to learn properly. To overcome
+search space, which requires too many particle to learn properly. To overcome
 this difficulty, instead of starting the algorithm with 1000 particles,
 the initial number of particles was set to 16,000. This meant that
 when the search space was the largest, the number of particles was
-sufficiently dense to represent the prior distribution. Then resampling
-was performed for the first time, the number of particles was dropped, 
-since the weight of most the particles had dropped to 0. The result is
+sufficiently dense to represent the prior distribution. The result is
 a particle filter algorithm that spends computing resources only where
-they are really needed.
+it is really needed.
 
-Many of the methods to determining areas of neural activation aim
-to be Bayesian, yet ultimately must make limiting assumptions about
-the distributions that remove many of the benefits. 
 The particle filter is a true Bayesian non-parametric algorithm that, given
 enough measurements will approach the true probability distribution
-of the parameters. While the conclusion that the parameters are not
-uniquely identifiable is a disappointing one in light years of research 
-attempting to learn these them, it in fact further demonstrates
+of the parameters. The conclusion that the parameters are not
+uniquely identifiable is a disappointing one in light of the plethora
+of research papers that have attempted to learn them. However, the fact
+that the parameters are ill-posed further demonstrates
 the need to estimate probability distribution rather than a single 
 parameter estimate. At the same time, the output of the particle filter
 is still able to give good estimates of the BOLD output, and is not
@@ -58,6 +54,18 @@ at determining activation in very low SNR simulations
 (\autoref{sec:Multi-voxel Simulation}). Not only that, but the particle
 filter algorithm identified areas of activation that were completely
 missed by SPM (\autoref{fig:comp6}). 
+
+The physiological plausibility is also of great value to future
+research. Unlike traditional methods, use of the BOLD model allows 
+the incorporation of outside, physiological knowledge in regression.
+If, for instance, it becomes possible to measure $v$ in vivo that data
+could instantly be added to the model to improve regression. Data can
+also be retrieved from the model. BOLD parameter distributions could 
+for the first time be used as diagnosis tools. In the past the fact 
+that the parameters are
+ill-posed would have prevented such research. However, now that a full
+distribution is available, comparing parameter estimates is actually
+feasible. 
 
 Concluding, the particle filter provides comparable performance with
 conventional tests, but also provides a platform for a wide range of
